force-app/main/default/objects/I_ST_Education_History__c/I_ST_Education_History__c.object-meta.xml
<CustomObject>
    <description>Custom Education History object to show under Related list of contact as part of IST-240</description>
    <label>Education History</label>
    <nameField>
        <displayFormat>EH-{00000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>