force-app/main/default/objects/I_ST_Education_History__c/fields/I_RM_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Affiliation</description>
    <label>Affiliation</label>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <type>Lookup</type>
</CustomField>