force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Award__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Award__c</fullName>
    <description>for IST-242 and IST-251. LoV to be added once confirmed.</description>
    <label>Award</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>