force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Code__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Code__c</fullName>
    <description>for IST-242 and IST-251</description>
    <label>Qualification Level</label>
    <type>TextArea</type>
</CustomField>