force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Completed_Year__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Completed_Year__c</fullName>
    <description>For IST-242 and IST-251</description>
    <label>Qualification Completed Year</label>
    <type>Date</type>
</CustomField>