force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Contact__c</fullName>
    <description>To render Contact related Education History</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>