force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Educational_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The school / college / university / institution from where the education is/was undertaken</description>
    <inlineHelpText>Please select the school / college / university / institution from where the education is/was undertaken</inlineHelpText>
    <label>Educational Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <type>Lookup</type>
</CustomField>