force-app/main/default/objects/I_ST_Education_History__c/fields/I_ST_Qualification_Type__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Qualification_Type__c</fullName>
    <description>As per IST-251</description>
    <label>Qualification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Post Secondary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>